- rehuff - http://wiki.xiph.org/Rehuff
- SQLite 3.22.0 - http://www.sqlite.org
- Tidy 5.6.0 - http://www.html-tidy.org
- TruePNG 0.6.2.5 - http://x128.ho.ua/pngutils.html
- UPX 3.94 - https://upx.github.io
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY
- Added russian translation. Thanks Max.
- Added per pluggin progress (RejZoR).

12.50 - 2018/02/27
- Switched to AGPL license to protect it from modifications in network environments and making it compatible with Ghostcript (Robin Watts #33).
- Added full licensing files to all plugins to avoid any confusion.
- Made About and Option windows resizable.
- Made ads load smoother.
- Retested in Windows XP SP3.
- Updated pngquant to 2.11.7.
- Updated pingo to 0.95w x86 and x64 versions.
- Updated ImageMagick to 7.0.7.23 with HDRI support.
- Some minor optimizations and code cleanup.

12.40 - 2018/02/19
- Added dutch translation. Thanks Luc.
- Added german translation. Thanks Oliver.
- Made installer multilanguage.
- Made all internal file operations use short names if available to avoid long path errors (#32 Ramon E).
- Implemented some translation improvements (Luc).
- Improved Google File Stream and Microsoft OneDrive compatibility.
- Fixed a regression in 12.30 which caused registry values not being properly read (srobert698).
- Fixed an access violations on some circunstances (Ramon E).
- Fixed some strings not being translated due to line breaks (Luc).
- Updated AdvanceCOMP to 2.10.
- Some minor optimizations and code cleanup.

12.30 - 2018/02/06
- Added creation of file backups before optimization, enabled by default, to avoid issues with large files in recyclebin. Can be disabled in Options (bianamaran).
- Added ask to user if he wants to show ads on first execution to avoid flagging it as "Ad Supported" in Softpedia and other channels.
- Improved startup logic.