@@ -159,7 +159,10 @@ ndo
 
 X.XX - YYYY
 - Added russian translation. Thanks Max.
+- Added swedish translation. Thanks a902cd23.
 - Added per pluggin progress (RejZoR).
+- Disabled ImageMagick on TIFF images when copy metadata because it is not kept (Dominik RUTSCHMANN).
+
 
 12.50 - 2018/02/27
 - Switched to AGPL license to protect it from modifications in network environments and making it compatible with Ghostcript (Robin Watts #33).
